feat: add methodology

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="pages/models.html">Modèles & Hardware</a>
             <a href="pages/use_cases.html">Cas d'Usage & Marché</a>
             <a href="pages/future.html">Vision 2030</a>
+            <a href="pages/methodology.html">Méthodologie</a>
         </nav>
     </header>
 
