--- a/pages/future.html
+++ b/pages/future.html
@@ -13,6 +13,7 @@
             <a href="models.html">Modèles & Hardware</a>
             <a href="use_cases.html">Cas d'Usage & Marché</a>
             <a href="future.html">Vision 2030</a>
+            <a href="methodology.html">Méthodologie</a>
         </nav>
     </header>
 
